Fix footer visibility

--- a/public/assets/sass/main.scss
+++ b/public/assets/sass/main.scss
@@ -838,6 +838,7 @@
 		text-align: center;
 		padding: 2em 0 0 0;
 		font-size: 0.75em;
+		z-index: 1;
 
 		a {
 			color: #ddd;
